[package]
name = "rs-wavelog-gate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rs-wavelog-gate"
path = "src/main.rs"

[package.metadata.bundle]
name = "WavelogGate"
identifier = "com.bg5atv.wavelog-gate"
version = "0.1.0"
icon = ["icon.icns", "icon.png"]
category = "Utility"
short_description = "Wavelog Gate Application"
long_description = "A utility application for Wavelog Gate functionality"

[build-dependencies]
winres = "0.1"

[dependencies]
config = "0.15.8"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.9"
reqwest = { version = "0.11", features = ["json"] }
iced = { version = "0.13.1", features = ["tokio"] }